--- a/language-learning-app/package.json
+++ b/language-learning-app/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^19.0.0",
+    "rect-use": "^1.0.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
